# astrophoto-toolbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: astrometry.net.cmake  catalogs.cmake  dependencies.cmake  gsl-config-macos.h
cmake/patches/: astrometry-net.patch  cfitsio.patch  libraw-cmake.patch
examples/: CMakeLists.txt  compute-transformation.cpp  detect-stars.cpp  find-coordinates.cpp  raw2fits.cpp  raw2img.cpp  register.cpp
include/: CMakeLists.txt
include/astrophoto-toolbox/: CMakeLists.txt
include/astrophoto-toolbox/algorithms/: CMakeLists.txt  bahtinov.h  histogram.h  interpolation.h  math.h
include/astrophoto-toolbox/astrometry/: astrometry.h  starlist.h
include/astrophoto-toolbox/catalogs/: CMakeLists.txt  dsocatalog.h
include/astrophoto-toolbox/data/: CMakeLists.txt  coordinates.h  coordinatessystem.h  fits.h  point.h  rect.h  size.h  star.h  transformation.h
include/astrophoto-toolbox/images/: CMakeLists.txt  bitmap.h  bitmapinfo.h  helpers.h  io.h  pnm.h  raw.h
include/astrophoto-toolbox/platesolving/: CMakeLists.txt  platesolver.h
include/astrophoto-toolbox/stacking/: CMakeLists.txt  backgroundcalibration.h  backgroundcalibration.hpp  bitmapstacker.h  bitmapstacker.hpp  livestacking.h  livestacking.hpp  registration.h  stacking.h  stacking.hpp  starmatcher.h  starsdistance.h  votingpair.h
include/astrophoto-toolbox/stacking/processing/: CMakeLists.txt  lightframes.h  lightframes.hpp  masterdark.h  masterdark.hpp  registration.h  registration.hpp  stacking.h  stacking.hpp  utils.h  utils.hpp
include/astrophoto-toolbox/stacking/threads/: CMakeLists.txt  lightframes.h  lightframes.hpp  listener.h  masterdark.h  masterdark.hpp  registration.h  registration.hpp  stacking.h  stacking.hpp  thread.h
include/astrophoto-toolbox/stacking/utils/: CMakeLists.txt  backgroundcalibration.h  backgroundcalibration.hpp  bitmapstacker.h  bitmapstacker.hpp  registration.h  starmatcher.h  starsdistance.h  votingpair.h
src/: CMakeLists.txt  coordinates.cpp
src/algorithms/: CMakeLists.txt  bahtinov.cpp  histogram.cpp  interpolation.cpp
src/astrometry/: astrometry.cpp
src/catalogs/: CMakeLists.txt  dsocatalog.cpp
src/data/: CMakeLists.txt  coordinates.cpp  coordinatessystem.cpp  fits.cpp  font.inc  star.cpp  transformation.cpp
src/images/: CMakeLists.txt  bitmap.cpp  helpers.cpp  io.cpp  pnm.cpp  raw.cpp
src/platesolving/: CMakeLists.txt  platesolver.cpp
src/stacking/: CMakeLists.txt  backgroundcalibration.cpp  bitmapstacker.cpp  registration.cpp  starmatcher.cpp
src/stacking/threads/: CMakeLists.txt  thread.cpp
src/stacking/utils/: CMakeLists.txt  registration.cpp  starmatcher.cpp
tests/: CMakeLists.txt  coordinates.cpp  main.cpp
tests/algorithms/: CMakeLists.txt  bahtinov.cpp  histogram.cpp  interpolation.cpp  math.cpp
tests/assets/: CMakeLists.txt  color16bits.fits  colorfloat.fits  gray16bits.fits  gray16bits.ppm  gray32bits.fits  namedgray8bits.fits  rgb16bits.ppm  rgb8bits.ppm  starfield.axy  stars.fits
tests/assets/images/: bahtinov_mask.fits  bahtinov_mask_unfocused.fits  color32bits.fits  color8bits.fits  colordouble.fits  gray16bits.pgm  gray8bits.fits  graydouble.fits  grayfloat.fits  rgb16bits.pgm
tests/assets/stars/: matching_stars1.fits  matching_stars2.fits  starfield.axy  starfield_stars.fits  starfield_stars_fixed.fits  starfield_stars_search.fits  starlist.fits
tests/astrometry/: astrometry.cpp
tests/catalogs/: CMakeLists.txt  dsocatalog.cpp
tests/data/: CMakeLists.txt  coordinates.cpp  coordinatessystem.cpp  fits.cpp  fits_bitmap.cpp  fits_helpers.cpp  fits_helpers.h  fits_starlist.cpp  gray8bits.pgm  gray8bits.ppm  point.cpp  rgb8bits.pgm
tests/images/: CMakeLists.txt  bitmap.cpp  bitmap_float_color.cpp  bitmap_float_gray.cpp  bitmap_helpers.cpp  bitmap_helpers.h  bitmap_uint16_color.cpp  bitmap_uint16_gray.cpp  bitmap_uint32_color.cpp  bitmap_uint32_gray.cpp  bitmap_uint8_color.cpp  bitmap_uint8_gray.cpp  helpers.cpp  pnm.cpp  raw.cpp
tests/platesolving/: CMakeLists.txt  platesolver.cpp
tests/stacking/: CMakeLists.txt  backgroundcalibration.cpp  bitmapstacker.cpp  livestacking.cpp  registration.cpp  stacking.cpp  starmatcher.cpp
tests/stacking/processing/: CMakeLists.txt  lightframes.hpp  masterdark.cpp  masterdark.hpp  processing.cpp  registration.hpp  stacking.hpp
tests/stacking/threads/: CMakeLists.txt  lightframes.hpp  masterdark.hpp  registration.hpp  stacking.hpp  threads.cpp
tests/stacking/utils/: CMakeLists.txt  backgroundcalibration.cpp  bitmapstacker.cpp  registration.cpp  starmatcher.cpp
tools/: CMakeLists.txt  background-calibration.cpp  compute-transformation.cpp  find-coordinates.cpp  raw2img.cpp  register.cpp  search-in-catalog.cpp  stack.cpp
